--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<body>
-<h1>Hello world</h1>
-<p>I'm hosted with GIthub Pages</p>
-</body>
-</html>
+do i have to write in this way?
